Fix top clipping for floating icons in mobile service slider cards

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ html {
   padding-left: 0 !important;
   padding-right: 0 !important;
   padding-bottom: 3rem !important;
-  padding-top: 0.5rem !important;
+  padding-top: 3rem !important;
   overflow: visible !important;
 }
 
